CREATE TABLE task (
    id serial primary key,
    name varchar(100)
);