@startuml
entity Projects {
    id
    --
    project_name
}

entity ProjectMembers {
    id
    --
    first_name
    last_name
    email
}

entity Tasks {
    id
    --
    name
}

entity ProjectMemberToProject {
    id
    --
    project_name
    member_name
    task_name
    description
    status
}

entity Status {
    id
    --
    status
}

Projects ||--o{ ProjectMemberToProject
ProjectMembers ||--o{ ProjectMemberToProject
Tasks ||--o{ ProjectMemberToProject
Status ||--o{ ProjectMemberToProject
@enduml